--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
+.idea/**
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
@@ -67,6 +68,7 @@ fabric.properties
 # Simple Build Tool
 # http://www.scala-sbt.org/release/docs/Getting-Started/Directories.html#configuring-version-control
 
+logs/**
 dist/*
 target/
 lib_managed/
