--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,7 +10,7 @@ service {
 }
 
 mongo {
-  url = "mongodb://localhost:27017"
+  url = "mongodb://mongo:27017"
   database = "sdkman"
   username = ""
   password = ""
