--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
   - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
   - sbt docker:publishLocal
 script:
+  - ./compose run --rm vendor_release_it_tests
   - ./compose run --rm vendor_release_acc_tests
 after_success:
   - docker push sdkman/vendor-release:3.0.0-SNAPSHOT
