--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,20 @@ services:
     ports:
       - "27017:27017"
 
+  vendor_release_it_tests:
+    image: nightscape/docker-sbt:latest
+    working_dir: /work
+    user: ${USER_ID}
+    volumes:
+      - ${PWD}:/work
+      - ${CACHE_DIR}/.ivy2:/ivy2
+      - ${CACHE_DIR}/.sbt:/sbt
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /usr/bin/docker:/bin/docker
+    depends_on:
+      - mongo
+    command: ./sbtw it:test
+
   vendor_release_acc_tests:
     image: nightscape/docker-sbt:latest
     working_dir: /work
