Allow configs to be overridden.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -11,12 +11,18 @@ service {
   port = 9000
 
   adminConsumer = "default_admin"
+  adminConsumer = ${?ADMIN_CONSUMER}
   token = "default_token"
+  token = ${?SERVICE_TOKEN}
 }
 
 mongo {
   url = "mongodb://mongo:27017"
+  url = ${?MONGO_URL}
   database = "sdkman"
+  database = ${?MONGO_DATABASE}
   username = ""
+  username = ${?MONGO_USERNAME}
   password = ""
+  password = ${?MONGO_PASSWORD}
 }
