--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 script:
   - ./compose run --rm vendor_release_acc_tests
 after_success:
-  - docker push sdkman/vendor-release:1.0.0-SNAPSHOT
+  - docker push sdkman/vendor-release:4.0.0
 cache:
   directories:
   - "$HOME/.sbt"
