--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -15,7 +15,7 @@ service {
 }
 
 mongo {
-  url = "mongodb://mongo:27017"
+  url = "mongodb://localhost:27017"
   url = ${?MONGO_URL}
   database = "sdkman"
   database = ${?MONGO_DATABASE}
