--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -15,12 +15,20 @@ service {
 }
 
 mongo {
-  url = "mongodb://localhost:27017"
-  url = ${?MONGO_URL}
+  url {
+    host = "localhost"
+    host = ${?MONGO_HOST}
+
+    port = 27017
+    port = ${?MONGO_PORT}
+  }
+
   database = "sdkman"
   database = ${?MONGO_DATABASE}
+
   username = ""
   username = ${?MONGO_USERNAME}
+
   password = ""
   password = ${?MONGO_PASSWORD}
 }
