--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ services:
 language: scala
 
 before_script:
+  - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
   - docker run --rm -d -p="27017:27017" --name=mongo mongo:3.2
   - sbt docker:publishLocal
   - docker run --rm -d --network=host --name=vendor-release sdkman/vendor-release:latest
