--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,10 +22,6 @@ jobs:
       run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
     - uses: oleksiyrudenko/gha-git-credentials@v2.1
       with:
-        global: true
-        name: 'Marco Vermeulen'
-        email: 'marco@sdkman.io'
-        actor: 'marc0der'
-        token: '${{ secrets.RELEASE_TOKEN }}'
+        token: '${{ secrets.GITHUB_TOKEN }}'
     - name: Release
       run: ./sbt "release with-defaults"
