Introduce postgres database migration.

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -8,6 +8,14 @@ jobs:
         image: mongo:3.2
         ports:
           - 27017:27017
+      postgres:
+        image: postgres:14
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: sdkman
     steps:
       - name: Checkout source code
         uses: actions/checkout@v2
