--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -32,3 +32,14 @@ mongo {
   password = ""
   password = ${?MONGO_PASSWORD}
 }
+
+jdbc {
+    url = "jdbc:postgresql://localhost:5432/sdkman"
+    url = ${?DATABASE_URL}
+
+    username = "postgres"
+    username = ${?DATABASE_USERNAME}
+
+    password = "postgres"
+    password = ${?DATABASE_PASSWORD}
+}
