--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -38,7 +38,7 @@ jdbc {
     url = ${?DATABASE_URL}
 
     username = "postgres"
-    username = ${?DATABASE_USERNAME}
+    username = ${?DATABASE_USER}
 
     password = "postgres"
     password = ${?DATABASE_PASSWORD}
