--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -34,12 +34,19 @@ mongo {
 }
 
 jdbc {
-    url = "jdbc:postgresql://localhost:5432/sdkman"
-    url = ${?DATABASE_URL}
+    connectionPool = "HikariCP"
+    dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+    properties = {
+        driver = "org.postgresql.Driver"
 
-    username = "postgres"
-    username = ${?DATABASE_USER}
+        url = "jdbc:postgresql://localhost:5432/sdkman"
+        url = ${?DATABASE_URL}
 
-    password = "postgres"
-    password = ${?DATABASE_PASSWORD}
+        user = "postgres"
+        user = ${?DATABASE_USER}
+
+        password = "postgres"
+        password = ${?DATABASE_PASSWORD}
+    }
+    numThreads = 10
 }
