Ignore vscode and metals.

--- a/.gitignore
+++ b/.gitignore
@@ -112,6 +112,10 @@ project/plugins/project/
 *.class
 *.log
 *.metals
+**/*.metals
 
 # End of https://www.gitignore.io/api/sbt,scala,bloop,metals,intellij+all
 .bsp/
+
+# vscode
+.vscode
