--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
-  loglevel = "DEBUG"
+  loglevel = "INFO"
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
 }
 
@@ -31,4 +31,15 @@ mongo {
 
   password = ""
   password = ${?MONGO_PASSWORD}
+}
+
+state-api {
+  url {
+    host = "http://localhost:8080"
+    host = ${?STATE_API_BASE_URL}
+  }
+  basic-auth {
+    username = "testuser"
+    password = "password123"
+  }
 }
