--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,10 +13,11 @@ jobs:
         uses: actions/checkout@v2
         with:
             ref: ${{ github.event.pull_request.head.sha }}
-      - name: Set up JDK 11.0.11
-        uses: actions/setup-java@v1
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
         with:
-          java-version: 11.0.11
+          distribution: 'temurin'
+          java-version: '11'
       - name: Run tests
         run: ./sbt test
       - uses: kentaro-m/auto-assign-action@v1.1.2
