fix: make state api credentials configurable

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -40,6 +40,8 @@ state-api {
   }
   basic-auth {
     username = "testuser"
+    username = ${?STATE_API_USERNAME}
     password = "password123"
+    password = ${?STATE_API_PASSWORD}
   }
 }
