feat: implement state api mode

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -35,13 +35,9 @@ mongo {
 
 state-api {
   url {
-    protocol = "http"
-    protocol = ${?STATE_API_PROTOCOL}
-
-    host = "localhost"
-    host = ${?STATE_API_HOST}
-
-    # port is inferred based on the host
+    # can be `local` or `remote`
+    mode = "local"
+    mode = ${?STATE_API_MODE}
   }
   basic-auth {
     username = "testuser"
